<resources>
  <string name="app_name">PalmRGB</string>
  <string name="create_frame">Create Frame</string>
  <string name="select_a_frame_name">Please enter a name for this visual frame</string>
  <string name="cancel">Cancel</string>
  <string name="frame_name">Frame Name</string>
  <string name="saved_frames">Saved Frames</string>
  <string name="reset_frame">Reset</string>
  <string name="upload_frame">Upload Frame</string>
  <string name="no_saved_frames">No Saved Frames</string>
  <string name="delete_frame">Delete Frame</string>
  <string name="disconnected">Disconnected</string>
  <string name="connection_status">Connection Status</string>
  <string name="connected">Connected</string>
  <string name="select_palette">Select Palette</string>
  <string name="create_palette">Create Palette</string>
  <string name="select_a_palette">Select a color palette</string>
  <string name="select">Select</string>
  <string name="change_display">Change Display</string>
  <string name="select_rgb_display">Select RGB Display</string>
  <string name="sixty_four_diodes">64 diodes</string>
  <string name="thirty_two_diodes">32 Diodes</string>
  <string name="no_saved_color_palettes">No Saved Color Palettes. Using Standard Palette</string>
  <string name="create_color">Create Color</string>
  <string name="select_color_to_add_message">Select from below to build a custom palette</string>
  <string name="choose_color_message">Go to Create Color to add more options</string>
  <string name="red">Red</string>
  <string name="blue">Blue</string>
  <string name="green">Green</string>
  <string name="enter_color_name">Enter a name for this color</string>
  <string name="color_name">Color Name</string>
  <string name="color_name_already_exists">A color with that name already exists</string>
  <string name="palette_name_already_exists">A palette with that name already exists</string>
  <string name="added_color">Added Color %s</string>
  <string name="added_palette">Added Palette %s</string>
  <string name="black">Black</string>
  <string name="yellow">Yellow</string>
  <string name="white">White</string>
  <string name="palette_name">Palette name</string>
  <string name="enter_palette_name">Enter palette name</string>
  <string name="selected_palette">Palette:\n%s</string>
  <string name="enter_palmrgb_ip_address">PalmRgb Ip Address</string>
  <string name="connect">Connect</string>
  <string name="enter_palmrgb_port">Port</string>
  <string name="checking_connection">Checking Connection</string>
  <string name="disconnect">Disconnect</string>
  <string name="failed_to_insert_duplicate_title">Failed to create frame. Duplicate title: %s</string>
    <string name="live_create_frame_updates">Live Updates from Create Frame</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="wheeled_platform">Wheeled Platform</string>

</resources>
