<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/tab_connection_status"
        android:title="@string/connection_status"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_developer_board_black"
        />

    <item android:id="@+id/tab_view_frames"
        android:title="@string/saved_frames"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_archive_black_24dp"
        />

    <item android:id="@+id/tab_create_frame"
        android:title="@string/create_frame"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_view_recipes"
         />

    <item android:id="@+id/tab_create_palette"
        android:title="@string/create_palette"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_create_palette"
        />

    <item android:id="@+id/tab_create_color"
        android:title="@string/create_color"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_colors"
        />
</menu>