<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <nyc.jsjrobotics.palmrgb.customViews.SubActivityToolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        style="@style/Toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/empty_palette_message"
                android:text="@string/add_color_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginBottom="@dimen/large_margin"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/palette_colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="true" />


            <View
                android:id="@+id/divider1"
                style="@style/Divider"
                android:layout_marginBottom="@dimen/large_margin"/>

            <TextView
                android:id="@+id/choose_color_message"
                android:text="@string/choose_color_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/small_margin" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/color_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_margin"/>

            <View
                android:id="@+id/divider2"
                style="@style/Divider"
                android:layout_marginBottom="@dimen/large_margin"/>

            <TextView
                android:id="@+id/create_color_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_color"
                android:layout_marginBottom="@dimen/small_margin"
                />

            <!-- TODO fix width and height to be relative values-->
            <nyc.jsjrobotics.palmrgb.customViews.RgbDiode
                android:id="@+id/preview_diode"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

            <TextView
                android:id="@+id/red_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"/>

            <SeekBar
                android:id="@+id/red_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin" />

            <TextView
                android:id="@+id/green_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"/>

            <SeekBar
                android:id="@+id/green_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin" />

            <TextView
                android:id="@+id/blue_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"/>

            <SeekBar
                android:id="@+id/blue_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin" />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_color"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
